--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.application.name=bankapp
-# MySQL Database configuration
-spring.datasource.url=jdbc:mysql://mysql:3306/bankappdb?useSSL=false&serverTimezone=UTC
+
+# Database
+spring.datasource.url=jdbc:mysql://mysql:3306/bankappdb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Test@123
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA & Hibernate configuration
+# JPA
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
